# Open_Duck_Playground

./: .env  .gitignore  chat_prompt.md  pyproject.toml  runbook.txt
.github/: copilot-instructions.md
learning/notebooks/: locomotion.ipynb
playground/common/: onnx_infer.py  runner.py  tb_logging.py
playground/open_duck_mini_v2/: ONNX.onnx  env_test.py  runner.py  standing.py
playground/open_duck_mini_v2/xmls/: exported_robot.xml  scene.xml
playground/wild_robot/: base.py  constants.py  ref_motion_viewer.py  runner.py  standing.py
playground/wild_robot/xmls/: config.json  post_process.py  scene.xml  scene_flat_terrain.xml  sensors.xml  wild_robot.xml
playground/wild_robot/xmls/assets/: battery_hook.part  battery_hook.stl  battery_servo_connect.part  battery_servo_connect.stl  batterybox.part  batterybox.stl  bno085.part  btm_btm_back.part  btm_btm_front.part  btm_servo_support.part  btm_servo_support.stl  btm_servo_support_side.part  btm_servo_support_side.stl  btm_top_back.part  btm_top_back.stl  btm_top_front.part  btm_top_front.stl  cell.part  foot_btm_back.part  foot_btm_front.part  foot_btm_front.stl  foot_main.part  foot_main.stl  foot_main_right.part  foot_main_right.stl  foot_side.part  foot_side.stl  foot_side_right.part  foot_side_right.stl  hip_cover.part  hip_gear.part  hip_gear.stl  (+43 more)
playground/wildrobot_dev/: ONNX.onnx  base.py  constants.py  env_test.py  mujoco_infer.py  mujoco_infer_base.py  ref_motion_viewer.py  runner.py  standing.py
playground/wildrobot_dev/xmls/: config.json  post_process.py  scene.xml  sensors.xml  wild_robot_dev.xml
(+65 files in other folders)
